force-app/main/default/objects/Snapshot__c/fields/IsExpired__c.field-meta.xml
<CustomField>
    <fullName>IsExpired__c</fullName>
    <formula>IF(RecordType.DeveloperName == &apos;Org_Limit_Snapshot&apos;, TODAY() &gt; DATEVALUE(CreatedDate) +  OrgLimitType__r.RetentionPeriod__c, TODAY() &gt; DATEVALUE(CreatedDate) + 3)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Expired</label>
    <type>Checkbox</type>
</CustomField>