force-app/main/default/objects/Snapshot__c/fields/MaxLimit__c.field-meta.xml
<CustomField>
    <fullName>MaxLimit__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Maxium Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>