force-app/main/default/objects/Snapshot__c/fields/OrgLimitName__c.field-meta.xml
<CustomField>
    <fullName>OrgLimitName__c</fullName>
    <formula>OrgLimitType__r.OrgLimitName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Org Limit Name</label>
    <type>Text</type>
</CustomField>