force-app/main/default/objects/Snapshot__c/fields/OrgLimitType__c.field-meta.xml
<CustomField>
    <fullName>OrgLimitType__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Org Limit Type</label>
    <referenceTo>OrgLimitType__c</referenceTo>
    <relationshipLabel>Snapshots</relationshipLabel>
    <relationshipName>Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>