force-app/main/default/objects/Snapshot__c/fields/UsagePercentage__c.field-meta.xml
<CustomField>
    <fullName>UsagePercentage__c</fullName>
    <formula>IF(MaxLimit__c != 0, Usage__c/MaxLimit__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Usage Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>