force-app/main/default/objects/Snapshot__c/recordTypes/Apex_Job_Snapshot.recordType-meta.xml
<RecordType>
    <fullName>Apex_Job_Snapshot</fullName>
    <active>true</active>
    <description>Snapshot recordType to store Apex job related logs</description>
    <label>Apex Job Snapshot</label>
</RecordType>