force-app/main/default/objects/Snapshot__c/recordTypes/Org_Limit_Snapshot.recordType-meta.xml
<RecordType>
    <fullName>Org_Limit_Snapshot</fullName>
    <active>true</active>
    <description>Snapshot recordType to store org limit related logs</description>
    <label>Org Limit Snapshot</label>
</RecordType>