force-app/main/default/objects/Snapshot__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OrgLimitName__c</columns>
    <columns>Usage__c</columns>
    <columns>UsagePercentage__c</columns>
    <columns>MaxLimit__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>