force-app/main/default/objects/Snapshot__c/listViews/Apex_Job_Snapshots.listView-meta.xml
<ListView>
    <fullName>Apex_Job_Snapshots</fullName>
    <columns>NAME</columns>
    <columns>ApexJobName__c</columns>
    <columns>AsyncApexJobId__c</columns>
    <columns>Description__c</columns>
    <columns>IsExpired__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Snapshot__c.Apex_Job_Snapshot</value>
    </filters>
    <label>Apex Job Snapshots</label>
</ListView>