force-app/main/default/objects/Snapshot__c/listViews/Org_Limit_Snapshots.listView-meta.xml
<ListView>
    <fullName>Org_Limit_Snapshots</fullName>
    <columns>NAME</columns>
    <columns>OrgLimitName__c</columns>
    <columns>UsagePercentage__c</columns>
    <columns>Usage__c</columns>
    <columns>MaxLimit__c</columns>
    <columns>IsExpired__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Snapshot__c.Org_Limit_Snapshot</value>
    </filters>
    <label>Org Limit Snapshots</label>
</ListView>